# connect4

./: .gitignore  CMakeLists.txt  Cargo.toml  INSTALL.md  LINKS.md  README.md  pyproject.toml  requirements.in  requirements.txt  submission.sh
python/: agent.py  main.py  middleware.py  test.py
src/: lib.rs
src/agents/: agent_mirror.rs  agent_modulo.rs  agent_random.rs  mod.rs
src/boards/: board.rs  board_array.rs  board_bitmask.rs  board_vector.rs  lines.rs  mod.rs  test_board.rs
src/games/: agent.rs  gameboard.rs  gameserver.rs  mod.rs  players.rs
src/games/gameboards/: gameboard.rs  gameboard_array.rs  gameboard_bitmask.rs  mod.rs
src/inputs/: configuration.rs  kaggle.rs  mod.rs  observation.rs
src/structs/: mod.rs
submission/: main.py  middleware.py  test.py
