[package]
name = "maturin_kaggle"
version = "0.1.0"
edition = "2021"

# DEFS: https://doc.rust-lang.org/cargo/reference/manifest.html
# DOCS: https://stackoverflow.com/questions/62838212/whats-the-correct-way-to-compile-maturin-packages
[lib]
name = "maturin_kaggle"
crate-type = ["cdylib", "staticlib"]


[dependencies]
cffi = "0.1.7"
rand = "0.8.5"
thiserror = "1.0.0"
anyhow = "1.0.51"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
