[project]
name = "maturin_kaggle"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["cffi"]

[build-system]
requires = [ "maturin>=0.12,<0.13", "cffi" ]
build-backend = "maturin"

#[build-system]
#requires = ["poetry-core>=1.0.0"]
#build-backend = "poetry.core.masonry.api"

# DOCS: https://maturin.rs/metadata.html
# Your library is not manylinux_2_17 (aka manylinux2014) compliant because of the presence of too-recent versioned symbols:
# ["libc.so.6 offending versions: GLIBC_2.33, GLIBC_2.28, GLIBC_2.34, GLIBC_2.18"]. Consider building in a manylinux docker container:
[tool.maturin]
strip = true         # Strip the library for minimum file size
bindings = "pyo3"    # maturin develop requires pyo3 bindings
# bindings = "cffi"  # Kaggle works with both pyo3 + cffi bindings
# compatibility = "manylinux2014"  # use: docker run --rm -v $(pwd):/io ghcr.io/pyo3/maturin build --release
compatibility = "linux"            # for maturin build --release


[tool.poetry]
name = "maturin_kaggle"
version = "0.1.0"
description = ""
authors = [ "James McGuigan <james.mcguigan@gmail.com>" ]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.2.4"
cffi = "0.1.7"
kaggle = "1.5.12"
kaggle-environments = "1.9.10"

[tool.poetry.dev-dependencies]
maturin = "^0.12.4"
mypy = "^0.910"

